Update: Add all HTML pages to Jarvis Voice Command, Footer Search Bar, and Search Page
- Added 46 missing pages to voice-assistant.js (Jarvis Voice Command)
- Added 7 missing pages to compact-search.js (Footer Search Bar)
- Added 56 missing pages to search.html (Search Page)
- All 78+ HTML pages are now searchable via voice commands and search bars
- Includes archive tools, e-book converters, image tools, and premium pages

--- a/search.html
+++ b/search.html
@@ -202,10 +202,64 @@
         { title: "Pricing", url: "pricing.html", description: "View our pricing plans and features", type: "Page", keywords: "pricing plans features premium" },
         { title: "Blog", url: "blog.html", description: "Read our latest blog posts and guides", type: "Page", keywords: "blog articles guides tutorials" },
         { title: "Privacy Policy", url: "privacy-policy.html", description: "Our privacy policy and data protection practices", type: "Page", keywords: "privacy policy data protection" },
-        { title: "Terms of Service", url: "terms-of-service.html", description: "Terms and conditions for using our services", type: "Page", keywords: "terms service conditions" }
+        { title: "Terms of Service", url: "terms-of-service.html", description: "Terms and conditions for using our services", type: "Page", keywords: "terms service conditions" },
+        { title: "7Z Extractor - Extract 7Z Files Online Free", url: "7z-extractor.html", description: "Extract files from 7Z  archives", type: "Tool", keywords: "7z extractor extractor extract files online free convert unzip open" },
+        { title: "7Z to ZIP Converter - Convert 7Z to ZIP Online Free", url: "7z-to-zip.html", description: "Convert 7Z to Zip online for free", type: "Tool", keywords: "7z to zip zip converter convert online free archive compressed" },
+        { title: "Add Page Numbers", url: "add-page-numbers.html", description: "Add Page Numbers - Online free tool", type: "Tool", keywords: "add page numbers add page numbers" },
+        { title: "Ai Image Generator", url: "ai-image-generator.html", description: "Generate images using AI technology", type: "Tool", keywords: "ai image generator image generator photo picture convert artificial intelligence generate create" },
+        { title: "Ai To Png", url: "ai-to-png.html", description: "Convert Ai to Png online for free", type: "Tool", keywords: "ai to png png image photo picture convert artificial intelligence generate create" },
+        { title: "Ai To Svg", url: "ai-to-svg.html", description: "Convert Ai to Svg online for free", type: "Tool", keywords: "ai to svg svg convert artificial intelligence generate create" },
+        { title: "Avif To Jpg", url: "avif-to-jpg.html", description: "Convert Avif to Jpg online for free", type: "Tool", keywords: "avif to jpg avif jpg image photo picture convert" },
+        { title: "Avif To Png", url: "avif-to-png.html", description: "Convert Avif to Png online for free", type: "Tool", keywords: "avif to png avif png image photo picture convert" },
+        { title: "Azw3 To Epub", url: "azw3-to-epub.html", description: "Convert Azw3 to Epub online for free", type: "Tool", keywords: "azw3 to epub azw3 epub convert" },
+        { title: "Batch Ziper", url: "batch-zip-converter.html", description: "Work with Batch Zip Converter archives online", type: "Tool", keywords: "batch zip converter batch ziper convert archive compressed" },
+        { title: "Bmp To Jpg", url: "bmp-to-jpg.html", description: "Convert Bmp to Jpg online for free", type: "Tool", keywords: "bmp to jpg bmp jpg image photo picture convert" },
+        { title: "Bmp To Png", url: "bmp-to-png.html", description: "Convert Bmp to Png online for free", type: "Tool", keywords: "bmp to png bmp png image photo picture convert" },
+        { title: "Cr2 To Jpg", url: "cr2-to-jpg.html", description: "Convert Cr2 to Jpg online for free", type: "Tool", keywords: "cr2 to jpg cr2 jpg image photo picture convert" },
+        { title: "Eps To Png", url: "eps-to-png.html", description: "Convert Eps to Png online for free", type: "Tool", keywords: "eps to png eps png image photo picture convert" },
+        { title: "Epub To Mobi", url: "epub-to-mobi.html", description: "Convert Epub to Mobi online for free", type: "Tool", keywords: "epub to mobi epub mobi convert" },
+        { title: "Epub To Pdf", url: "epub-to-pdf.html", description: "Convert Epub to Pdf online for free", type: "Tool", keywords: "epub to pdf epub pdf document convert" },
+        { title: "Excel Unlocker", url: "excel-unlocker.html", description: "Excel Unlocker - Online free tool", type: "Tool", keywords: "excel unlocker excel unlocker remove password decrypt open" },
+        { title: "Exif Data Remove", url: "exif-data-remove.html", description: "Exif Data Remove - Online free tool", type: "Tool", keywords: "exif data remove exif data remove delete" },
+        { title: "Fb2 To Pdf", url: "fb2-to-pdf.html", description: "Convert Fb2 to Pdf online for free", type: "Tool", keywords: "fb2 to pdf fb2 pdf document convert" },
+        { title: "Folder To Zip", url: "folder-to-zip.html", description: "Convert Folder to Zip online for free", type: "Tool", keywords: "folder to zip folder zip convert archive compressed" },
+        { title: "Hdr To Jpg", url: "hdr-to-jpg.html", description: "Convert Hdr to Jpg online for free", type: "Tool", keywords: "hdr to jpg hdr jpg image photo picture convert" },
+        { title: "Heic To Jpg", url: "heic-to-jpg.html", description: "Convert Heic to Jpg online for free", type: "Tool", keywords: "heic to jpg heic jpg image photo picture convert" },
+        { title: "Image Cropper", url: "image-cropper.html", description: "Crop images to remove unwanted areas", type: "Tool", keywords: "image cropper image cropper photo picture trim cut" },
+        { title: "Image Repair", url: "image-repair.html", description: "Repair and restore damaged images", type: "Tool", keywords: "image repair image repair photo picture artificial intelligence generate create" },
+        { title: "Indian Style Resume Generator", url: "Indian-style-Resume-generator.html", description: "Create professional resume online", type: "Tool", keywords: "indian style resume generator indian style resume generator convert cv biodata job" },
+        { title: "Iso Extractor", url: "iso-extractor.html", description: "Extract files from Iso  archives", type: "Tool", keywords: "iso extractor iso extractor convert unzip open extract" },
+        { title: "Jpg To Webp", url: "jpg-to-webp.html", description: "Convert Jpg to Webp online for free", type: "Tool", keywords: "jpg to webp jpg webp image photo picture convert" },
+        { title: "Marriage Biodata Maker", url: "biodata-maker.html", description: "Create marriage biodata form online", type: "Tool", keywords: "biodata maker marriage biodata maker personal bio" },
+        { title: "Marriage Card", url: "marriage-card.html", description: "Create marriage invitation card online", type: "Tool", keywords: "marriage card marriage card wedding invitation" },
+        { title: "Mobi To Epub", url: "mobi-to-epub.html", description: "Convert Mobi to Epub online for free", type: "Tool", keywords: "mobi to epub mobi epub convert" },
+        { title: "Online_Resume_Maker", url: "online_resume_maker.html", description: "Create professional resume online", type: "Tool", keywords: "online_resume_maker cv biodata job" },
+        { title: "PDF to Excel Premium - OCR Conversion | High Accuracy Excel Export", url: "pdf-to-excel-premium.html", description: "Convert Pdf to Excel Premium online for free", type: "Tool", keywords: "pdf to excel premium pdf excel premium ocr conversion high accuracy export document convert" },
+        { title: "PDF to Word Premium - OCR Conversion | High Accuracy Word Export", url: "pdf-to-word-premium.html", description: "Convert Pdf to Word Premium online for free", type: "Tool", keywords: "pdf to word premium pdf word premium ocr conversion high accuracy export document convert" },
+        { title: "Pdf To Epub", url: "pdf-to-epub.html", description: "Convert Pdf to Epub online for free", type: "Tool", keywords: "pdf to epub pdf epub document convert" },
+        { title: "Pdf To Text", url: "pdf-to-text.html", description: "Convert Pdf to Text online for free", type: "Tool", keywords: "pdf to text pdf text document convert" },
+        { title: "Photo Enhancer", url: "photo-enhancer.html", description: "Photo Enhancer - Online free tool", type: "Tool", keywords: "photo enhancer photo enhancer convert" },
+        { title: "Png To Ico", url: "png-to-ico.html", description: "Convert Png to Ico online for free", type: "Tool", keywords: "png to ico png ico image photo picture convert" },
+        { title: "Png To Webp", url: "png-to-webp.html", description: "Convert Png to Webp online for free", type: "Tool", keywords: "png to webp png webp image photo picture convert" },
+        { title: "PowerPoint to PDF Converter - Convert PPT to PDF Online Free | PPT PDF Converter", url: "ppt-to-pdf-new.html", description: "Convert Ppt to Pdf New online for free", type: "Tool", keywords: "ppt to pdf new powerpoint pdf converter convert ppt online free document" },
+        { title: "Protect Excel", url: "protect-excel.html", description: "Protect Excel - Online free tool", type: "Tool", keywords: "protect excel protect excel password secure lock" },
+        { title: "Psd To Jpg", url: "psd-to-jpg.html", description: "Convert Psd to Jpg online for free", type: "Tool", keywords: "psd to jpg psd jpg image photo picture convert" },
+        { title: "Psd To Png", url: "psd-to-png.html", description: "Convert Psd to Png online for free", type: "Tool", keywords: "psd to png psd png image photo picture convert" },
+        { title: "Rar Extractor", url: "rar-extractor.html", description: "Extract files from Rar  archives", type: "Tool", keywords: "rar extractor rar extractor convert unzip open extract archive" },
+        { title: "Rar To Zip", url: "rar-to-zip.html", description: "Convert Rar to Zip online for free", type: "Tool", keywords: "rar to zip rar zip convert archive compressed" },
+        { title: "Raw To Jpg", url: "raw-to-jpg.html", description: "Convert Raw to Jpg online for free", type: "Tool", keywords: "raw to jpg raw jpg image photo picture convert" },
+        { title: "Resume Maker Online Free - Create Professional Resume & CV Builder 2025", url: "resume-maker.html", description: "Create professional resume online", type: "Tool", keywords: "resume maker resume maker online free create professional builder 2025 cv biodata job" },
+        { title: "Rtf To Pdf", url: "rtf-to-pdf.html", description: "Convert Rtf to Pdf online for free", type: "Tool", keywords: "rtf to pdf rtf pdf document convert" },
+        { title: "Svg To Jpg", url: "svg-to-jpg.html", description: "Convert Svg to Jpg online for free", type: "Tool", keywords: "svg to jpg svg jpg image photo picture convert" },
+        { title: "Svg To Png", url: "svg-to-png.html", description: "Convert Svg to Png online for free", type: "Tool", keywords: "svg to png svg png image photo picture convert" },
+        { title: "Tar To Zip", url: "tar-to-zip.html", description: "Convert Tar to Zip online for free", type: "Tool", keywords: "tar to zip tar zip convert archive compressed" },
+        { title: "Tiff To Png", url: "tiff-to-png.html", description: "Convert Tiff to Png online for free", type: "Tool", keywords: "tiff to png tiff png image photo picture convert" },
+        { title: "Transparent Background Maker", url: "transparent-background-maker.html", description: "Transparent Background Maker - Online free tool", type: "Tool", keywords: "transparent background maker transparent background maker" },
+        { title: "Txt To Pdf", url: "txt-to-pdf.html", description: "Convert Txt to Pdf online for free", type: "Tool", keywords: "txt to pdf txt pdf document convert" },
+        { title: "Webp To Png", url: "webp-to-png.html", description: "Convert Webp to Png online for free", type: "Tool", keywords: "webp to png webp png image photo picture convert" },
+        { title: "Zip Extractor", url: "zip-extractor.html", description: "Extract files from Zip  archives", type: "Tool", keywords: "zip extractor zip extractor convert unzip open extract archive compressed" },
+        { title: "Zip To Rar", url: "zip-to-rar.html", description: "Convert Zip to Rar online for free", type: "Tool", keywords: "zip to rar zip rar convert archive compressed" },
     ];
-
-    // Get search query from URL
     const urlParams = new URLSearchParams(window.location.search);
     const query = urlParams.get('q') || '';
 
