Clean up: Remove unused convertToWord function code from main converter page

--- a/frontend/pdf-to-word-converter.html
+++ b/frontend/pdf-to-word-converter.html
@@ -539,7 +539,8 @@
         // Set PDF.js worker
         pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
         
-        const API_BASE_URL = 'https://pdf-to-word-converter-iwumaktavq-uc.a.run.app';
+        // API_BASE_URL no longer needed - free version is completely browser-based
+        // Premium conversions are handled on pdf-to-word-premium.html page
         
         const previewGrid = document.getElementById('previewGrid');
         const pdfName = document.getElementById('pdfName');
