Fix: Update service URL from old to new Cloud Run URL (pdf-to-word-converter-564572183797.us-central1.run.app)

--- a/pdf-to-word-converter.html
+++ b/pdf-to-word-converter.html
@@ -538,7 +538,7 @@
         pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
         
         // API_BASE_URL for server-based conversion (both free and premium)
-        const API_BASE_URL = 'https://pdf-to-word-converter-iwumaktavq-uc.a.run.app';
+        const API_BASE_URL = 'https://pdf-to-word-converter-564572183797.us-central1.run.app';
         
         const previewGrid = document.getElementById('previewGrid');
         const pdfName = document.getElementById('pdfName');
