Remove all old service URLs and update to new Cloud Run URL everywhere

--- a/frontend/pdf-to-jpg.html
+++ b/frontend/pdf-to-jpg.html
@@ -297,7 +297,7 @@
     })();
     </script>
     <script>
-        const API_BASE_URL = 'https://pdf-to-word-converter-iwumaktavq-uc.a.run.app';
+        const API_BASE_URL = 'https://pdf-to-word-converter-564572183797.us-central1.run.app';
         
         const uploadArea = document.getElementById('uploadArea');
         const fileInput = document.getElementById('fileInput');
