--- a/pdf-to-excel-convert.html
+++ b/pdf-to-excel-convert.html
@@ -1774,7 +1774,7 @@
                 } else {
                     // Fallback if script not loaded
                     const pageName = currentPage.replace('.html', '').replace(/-/g, ' ').replace(/\b\w/g, l => l.toUpperCase());
-                    const response = await fetch('https://pdf-to-word-converter-iwumaktavq-uc.a.run.app/api/feedback', {
+                    const response = await fetch('https://pdf-to-word-converter-564572183797.us-central1.run.app/api/feedback', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json'
