--- a/frontend/pdf-editor.html
+++ b/frontend/pdf-editor.html
@@ -212,7 +212,7 @@
     </div>
 
     <script>
-        const API_BASE_URL = 'https://pdf-to-word-converter-iwumaktavq-uc.a.run.app';
+        const API_BASE_URL = 'https://pdf-to-word-converter-564572183797.us-central1.run.app';
         
         pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
         
